# Simulator

./: CMakeLists.txt  README.md  main.cpp
include/: aircraft.h  aircraft_types.h  c_semaphore.h  defs.h  logger.h  publisher.h  simulator.h
src/: aircraft.cpp  c_semaphore.cpp  publisher.cpp  simulator.cpp
tests/: tests.cpp
